server that handles custom slug
